# EasyCompute

./: .gitignore  CMakeLists.txt  readme.md
example/: CMakeLists.txt  main.cpp  test  test.cpp
include/: EC.hpp
include/BackendContext/: abstract.hpp  manager.cuh
include/Runtime/cuda/kernel/: kernel.hpp
include/backends/: abstract.hpp  api.hpp  control.hpp  design.txt  device_enabled.hpp  device_manager.hpp  device_runtime.hpp  manager.hpp  plan.hpp  task_executor.hpp
include/backends/cpu/: context.hpp  cpu_runtime.hpp  exec.hpp
include/backends/cuda/: cuda_runtime.cuh  cuda_runtime.hpp  cuda_runtime_impl.cuh  exec.cuh
include/graph/: api.hpp  compose.hpp  executor.hpp  graph.hpp  kind.hpp  node.hpp  trace_api.hpp  trace_ctx.hpp
include/graph/trace/: api.hpp  ctx.hpp  guard.hpp  trace_kind.hpp
include/kernel/: tensor_op.hpp
include/kernel/cpu/: kernel.hpp  mem.hpp
include/kernel/cuda/: kernel.cuh  util.cuh
include/runtime/: runtime_context.hpp  task.hpp  task_executor.hpp  task_scheduler.hpp
include/tensor/: TOp.hpp  access.hpp  api.hpp  buffer.hpp  device.hpp  dtype.hpp  function.cuh  meta.hpp  shape.hpp  storage.hpp  tensor.hpp  tensorImpl.hpp  tensor_cpu_kernels.hpp  tensor_op.hpp
include/tensor/device/: device.hpp  info.txt  manager.cuh  manager.hpp
include/tensor/device/cpu/: context.hpp
include/tensor/device/cpu/kernel/: kernel.hpp  matrix_op.hpp
include/tensor/device/nv/: context.cuh
include/tensor/device/nv/kernel/: kernel.hpp
include/util/: check_cuda.cuh  err.hpp  logger.hpp  rand.h
src/: CMakeLists.txt
src/device/: allocator.cpp
src/device/cpu/: cpu_runtime_impl.cpp  kernel.cpp  matrix_op.cpp
src/device/cuda/: cuda_runtime_impl.cu  device.cu  stub.cpp
src/device/cuda/cuda_kernel/: elementwise.cu  gemm.cu  matrix.cu
src/device/cuda/cuda_kernel/test/: CMakeLists.txt  test_g.cu
src/device/cuda/kernel/: elementwise.cu  gemm.cu  matrix_op.cu  util.cuh
src/device/cuda/kernel/test/: test_g.cu
src/device/nv/: kernel.cpp
src/graph/: compose.cpp  executor.cpp  graph.cpp  trace.cpp
src/runtime/: task_scheduler.cpp
src/tensor/: function.cu  task_executor.cpp  tensor.cpp  tensor_op.cpp
